[project]
name = "clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tables>=3.11.1",
]
